--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
                 <a class="linked-button" target="_blank" href="https://codeforces.com/profile/HIMU005">Visit me</a>
         </div>
         <div class="half-width">
-            <!-- <img src="images/profile.png" alt=""> -->
-            <img src="images/jhankar.png" alt="">
+            <img src="images/profile.png" alt="">
+
         </div>
     </section>
 
     <section class="dream-area">
         <div class="half-width">
-            <!-- <img src="images/nanu.png" alt=""> -->
-            <img src="images/jhankar2.png" alt="">
+            <img src="images/nanu.png" alt="">
+
         </div>
         <div class="half-width">
             <h2>Nanu Bari</h2>
